Liveview image upload works

--- a/lib/pento_web/live/product_live/form_component.html.heex
+++ b/lib/pento_web/live/product_live/form_component.html.heex
@@ -24,7 +24,11 @@
     <%= label f, :sku %>
     <%= number_input f, :sku %>
     <%= error_tag f, :sku %>
+
   
+    <%= live_file_input @uploads.image %>
+    <%= hidden_input f, :image_upload %>
+        
     <div>
       <%= submit "Save", phx_disable_with: "Saving..." %>
     </div>
