Uploaded images displayed

--- a/lib/pento_web/live/product_live/show.html.heex
+++ b/lib/pento_web/live/product_live/show.html.heex
@@ -9,6 +9,15 @@
     return_to: Routes.product_show_path(@socket, :show, @product) %>
 <% end %>
 
+
+<article class="column">
+
+
+
+</article>
+
+<%= img_tag(Routes.static_path(@socket,@product.image_upload || "/images/phoenix.png"), width: 200, height: "100%") %>
+
 <ul>
 
   <li>
