--- a/lib/pento_web/live/product_live/form_component.html.heex
+++ b/lib/pento_web/live/product_live/form_component.html.heex
@@ -9,26 +9,25 @@
     phx-change="validate"
     phx-submit="save">
   
-    <%= label f, :name %>
-    <%= text_input f, :name %>
-    <%= error_tag f, :name %>
-  
-    <%= label f, :description %>
-    <%= text_input f, :description %>
-    <%= error_tag f, :description %>
-  
-    <%= label f, :unit_price %>
-    <%= number_input f, :unit_price, step: "any" %>
-    <%= error_tag f, :unit_price %>
-  
-    <%= label f, :sku %>
-    <%= number_input f, :sku %>
-    <%= error_tag f, :sku %>
+<%= live_flash(@flash, :info) %>
 
-     <%= live_file_input @uploads.image %>
-   
-    <%= hidden_input f, :image_upload %>
-        
+<%= label f, :name %> 
+<%= text_input f, :name %> 
+<%= error_tag f, :name %>
+
+ <%= label f, :description %> 
+ <%= text_input f, :description %> 
+ <%= error_tag f, :description %> 
+
+ <%= label f, :unit_price %> 
+ <%= number_input f, :unit_price, step: "any" %> 
+ <%= error_tag f, :unit_price %> <%= label f, :sku %> 
+ 
+ <%= number_input f, :sku %> <%= error_tag f, :sku %> 
+ <%= hidden_input f, :image_upload %> <%= label f, :image %>
+<%= live_file_input @uploads.image %> 
+
+
     <div>
       <%= submit "Save", phx_disable_with: "Saving..." %>
     </div>
