Fixed bugs: Added missing function

--- a/lib/pento_web/live/rating_live/show_component.html.heex
+++ b/lib/pento_web/live/rating_live/show_component.html.heex
@@ -1,5 +1,3 @@
 <h4>
-<%= @product.name %>
-<%= raw render_rating_stars(@rating.stars) %>
-
+<%= @product.name%>: <%= raw render_rating_stars(@rating.stars) %> 
 </h4>
