User Activity Tracking

--- a/lib/pento_web/live/admin_dashboard_live.html.heex
+++ b/lib/pento_web/live/admin_dashboard_live.html.heex
@@ -3,3 +3,5 @@
 </section>
 
 <%= live_component @socket, PentoWeb.SurveyResultsLive, id: @survey_results_component_id %>
+
+<%= live_component @socket, PentoWeb.UserActivityLive, id: @user_activity_component_id %>
